argocd/overlays/sidecar-plugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: helmfile-plugin
          image: travisghansen/argo-cd-helmfile:latest
          command: [/var/run/argocd/argocd-cmp-server]
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: helmfile-cmp-tmp
      volumes:
        - emptyDir: {}
          name: helmfile-cmp-tmp
